# refinedc-copilot

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  shell.nix
.cursor/rules/: copilot.mdc  mcp-ts.mdc  refinedc-annotations.mdc  refinedc-readme.mdc
.github/workflows/: checks.yml
legacy/: README.md
legacy/prompts/: specs.system.prompt
legacy/scaffold/: .envrc  README.md  refinedc-copilot-config.toml
legacy/vscode0/: package.json
prompts/: annotationContinue.user.prompt  annotationInit.user.prompt  lemmaStatements.dev.prompt  specs.system.prompt
refinedc-copilot/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
refinedc-copilot/src/: extension-utils.ts  extension.ts
scaffold/: .envrc  .gitignore  README.md  pyproject.toml  refinedc-copilot-config.toml
scaffold/sources/examples/: README.md
scaffold/sources/examples/src/: fib.c  sumupto.c
scaffold/src/refinedc_copilot_scaffold/: README.md  __init__.py  config.py  logging.py  main.py
scaffold/src/refinedc_copilot_scaffold/agent/: lemma_assist.py  models.py  multi.py  orchestration.py  spec_assist.py  verification_flow.py
scaffold/src/refinedc_copilot_scaffold/codebase/: models.py  parsing.py
scaffold/src/refinedc_copilot_scaffold/prompting/: __init__.py  lemma-assist.system.txt  spec-assist.system.prompt  spec-assist.system.txt
scaffold/src/refinedc_copilot_scaffold/tools/: io.py  verification.py
scaffold/tests/: test_io.py  test_verification.py
temp/: foo.v
vscode/: .envrc  README.md  package.json  pnpm-lock.yaml
vscode2/: package.json  pnpm-lock.yaml
(+63 files in other folders)
